--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
-    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <!-- jQuery from CDN -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
+    <script src="js/app.js">
+
+    </script>
+
 
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
@@ -35,11 +42,22 @@
           <!-- you can put rows inside of columns! -->
           <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
           <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
+            <div class="col-md-4 box" id="one"></div>
+            <div class="col-md-4 box" id="two"></div>
+            <div class="col-md-4 box" id="three"></div>
           </div>
-
+          <div class="row">
+            <div class="col-md-4 box" id="four"></div>
+            <div class="col-md-4 box" id="five"></div>
+            <div class="col-md-4 box" id="six"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 box" id="seven"></div>
+            <div class="col-md-4 box" id="eight"></div>
+            <div class="col-md-4 box" id="nine"></div>
+          </div>
+          <br>
+          <button class="col-md-offset-5" type="button" name="reset">reset</button>
 
 
         </div>
